Smurf recipe completed Week 3 Daniel Wang

--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,3 +1,14 @@
 /Houses.class
-/robot.jar
 /PhotoQuiz.class
+/robot.jar
+/Cat.class
+/HarryPotter.class
+/SeaCreature.class
+/Runner.class
+/Smurf.class
+/Runner2.class
+/Backpack.class
+/Pencil.class
+/Ruler.class
+/Supply.class
+/Textbook.class
