Backpack and DrumKit

--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,14 +1,22 @@
-/Houses.class
-/PhotoQuiz.class
-/robot.jar
+/Backpack.class
 /Cat.class
 /HarryPotter.class
-/SeaCreature.class
-/Runner.class
-/Smurf.class
-/Runner2.class
-/Backpack.class
+/Houses.class
 /Pencil.class
+/PhotoQuiz.class
 /Ruler.class
+/Runner.class
+/Runner2.class
+/SeaCreature.class
+/Smurf.class
 /Supply.class
 /Textbook.class
+/robot.jar
+/DrumKit.class
+/Drum.jpg
+/191617__dwsd__jhd-bd-35.wav
+/Drum.wav
+/Drum2.png
+/Drum2.wav
+/Drum3.jpeg
+/Drum3.wav
