--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,5 +1,12 @@
 /Backpack.class
 /Cat.class
+/Drum.jpg
+/Drum.wav
+/Drum2.png
+/Drum2.wav
+/Drum3.jpeg
+/Drum3.wav
+/DrumKit.class
 /HarryPotter.class
 /Houses.class
 /Pencil.class
@@ -12,11 +19,7 @@
 /Supply.class
 /Textbook.class
 /robot.jar
-/DrumKit.class
-/Drum.jpg
-/191617__dwsd__jhd-bd-35.wav
-/Drum.wav
-/Drum2.png
-/Drum2.wav
-/Drum3.jpeg
-/Drum3.wav
+/BodyPartQuiz.class
+/download.jpg
+/DuelingButtons.class
+/Jeopardy.class
