--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,4 +1,5 @@
 /Backpack.class
+/BodyPartQuiz.class
 /Cat.class
 /Drum.jpg
 /Drum.wav
@@ -7,8 +8,10 @@
 /Drum3.jpeg
 /Drum3.wav
 /DrumKit.class
+/DuelingButtons.class
 /HarryPotter.class
 /Houses.class
+/Jeopardy.class
 /Pencil.class
 /PhotoQuiz.class
 /Ruler.class
@@ -18,8 +21,7 @@
 /Smurf.class
 /Supply.class
 /Textbook.class
-/robot.jar
-/BodyPartQuiz.class
 /download.jpg
-/DuelingButtons.class
-/Jeopardy.class
+/robot.jar
+/download2.jpg
+/download3.jpg
