Pet Platypus, Cow Timer, Netflix WIP

--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -22,6 +22,13 @@
 /Supply.class
 /Textbook.class
 /download.jpg
-/robot.jar
 /download2.jpg
 /download3.jpg
+/robot.jar
+/Platypus.class
+/PetPlatypus.class
+/CowTimer.class
+/275154__bird-man__moo.wav
+/Netflix.class
+/NetflixQueue.class
+/Movie.class
