TeaMaker, SimpleCalculator IP

--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,7 +1,48 @@
+/275154__bird-man__moo.wav
+/Backpack.class
+/BodyPartQuiz.class
+/Cat.class
+/CowTimer.class
+/Drum.jpg
+/Drum.wav
+/Drum2.png
+/Drum2.wav
+/Drum3.jpeg
+/Drum3.wav
+/DrumKit.class
+/DuelingButtons.class
+/Gridworld.class
+/HarryPotter.class
+/Houses.class
+/Jeopardy.class
 /Minion.class
-/TeaMaker.class
-/Tea.class
+/MinionTest.class
+/Movie.class
+/Netflix.class
+/NetflixQueue.class
+/Pencil.class
+/PhotoQuiz.class
+/Platypus.class
+/Ruler.class
+/Runner.class
+/Runner2.class
+/SeaCreature.class
+/Smurf.class
+/Supply.class
 /Tea$Cup.class
 /Tea$Kettle$Water.class
 /Tea$Kettle.class
 /Tea$TeaBag.class
+/Tea.class
+/TeaMaker.class
+/Textbook.class
+/download.jpg
+/download2.jpg
+/download3.jpg
+/gridworld.jar
+/robot.jar
+/Cup.class
+/Kettle$Water.class
+/Kettle.class
+/TeaBag.class
+/SimpleCalculator.class
