Jukebox, Typing Tutor

--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,43 +1,5 @@
-/275154__bird-man__moo.wav
-/Backpack.class
-/BodyPartQuiz.class
-/Cat.class
-/CowTimer.class
-/Cup.class
-/Drum.jpg
-/Drum.wav
-/Drum2.png
-/Drum2.wav
-/Drum3.jpeg
-/Drum3.wav
-/DrumKit.class
-/DuelingButtons.class
-/Gridworld.class
-/HarryPotter.class
-/Houses.class
-/Jeopardy.class
-/Kettle$Water.class
-/Kettle.class
-/Minion.class
-/MinionTest.class
-/Movie.class
-/Netflix.class
-/NetflixQueue.class
-/Pencil.class
-/PhotoQuiz.class
-/Platypus.class
-/Ruler.class
-/Runner.class
-/Runner2.class
-/SeaCreature.class
-/SimpleCalculator.class
-/Smurf.class
-/Supply.class
-/TeaBag.class
-/TeaMaker.class
-/Textbook.class
-/download.jpg
-/download2.jpg
-/download3.jpg
-/gridworld.jar
-/robot.jar
+/Song$1.class
+/Song.class
+/birds.wav
+/win.mp3
+/TypingTutor.class
