--- a/.classpath
+++ b/.classpath
@@ -5,5 +5,6 @@
 	<classpathentry kind="lib" path="src/robot.jar"/>
 	<classpathentry kind="lib" path="src/gridworld.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
+	<classpathentry kind="lib" path="src/javazoom.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
