--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -4,6 +4,7 @@
 /Cat.class
 /ChuckleClicker.class
 /CowTimer.class
+/Cup.class
 /Drum.jpg
 /Drum.wav
 /Drum2.png
@@ -18,46 +19,47 @@
 /JamesBond.class
 /Jeopardy.class
 /Jukebox.class
-/Microwave.class
-/Minion.class
-/Pencil.class
-/Ruler.class
-/Song$1.class
-/Song.class
-/Supply.class
-/Textbook.class
-/birds.wav
-/download.jpg
-/download2.jpg
-/download3.jpg
-/gridworld.jar
-/javazoom.jar
-/robot.jar
-/win.mp3
-/Cup.class
 /Kettle$Water.class
 /Kettle.class
+/Microwave.class
+/Minion.class
 /MinionTest.class
 /Movie.class
 /MyTwitter.class
 /NastySurprise.class
 /Netflix.class
 /NetflixQueue.class
+/Pencil.class
 /PhotoQuiz.class
 /PigLatinTranslator.class
 /PigLatinTranslatorRunner.class
 /Platypus.class
 /Popcorn.class
+/Ruler.class
 /Runner.class
 /Runner2.class
 /SeaCreature.class
 /SimpleCalculator.class
 /Smurf.class
+/Song$1.class
+/Song.class
+/Supply.class
 /TeaBag.class
 /TeaMaker.class
 /TeaParty.class
+/Textbook.class
 /TypingTutor.class
 /Vault.class
 /VaultRunner.class
 /WhackAMole.class
+/birds.wav
+/download.jpg
+/download2.jpg
+/download3.jpg
+/gridworld.jar
+/javazoom.jar
 /pong.wav
+/robot.jar
+/win.mp3
+/Marathoner.class
+/MarathonRegister.class
