Binary Converter, Code4Life

--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,16 +1,29 @@
 /275154__bird-man__moo.wav
 /Backpack.class
-/BodyPartQuiz.class
-/Cat.class
-/ChuckleClicker.class
-/CowTimer.class
-/Cup.class
 /Drum.jpg
 /Drum.wav
 /Drum2.png
 /Drum2.wav
 /Drum3.jpeg
 /Drum3.wav
+/Pencil.class
+/Ruler.class
+/Supply.class
+/Textbook.class
+/birds.wav
+/download.jpg
+/download2.jpg
+/download3.jpg
+/gridworld.jar
+/javazoom.jar
+/pong.wav
+/robot.jar
+/win.mp3
+/BodyPartQuiz.class
+/Cat.class
+/ChuckleClicker.class
+/CowTimer.class
+/Cup.class
 /DrumKit.class
 /DuelingButtons.class
 /Gridworld.class
@@ -21,6 +34,8 @@
 /Jukebox.class
 /Kettle$Water.class
 /Kettle.class
+/MarathonRegister.class
+/Marathoner.class
 /Microwave.class
 /Minion.class
 /MinionTest.class
@@ -29,13 +44,11 @@
 /NastySurprise.class
 /Netflix.class
 /NetflixQueue.class
-/Pencil.class
 /PhotoQuiz.class
 /PigLatinTranslator.class
 /PigLatinTranslatorRunner.class
 /Platypus.class
 /Popcorn.class
-/Ruler.class
 /Runner.class
 /Runner2.class
 /SeaCreature.class
@@ -43,23 +56,12 @@
 /Smurf.class
 /Song$1.class
 /Song.class
-/Supply.class
 /TeaBag.class
 /TeaMaker.class
 /TeaParty.class
-/Textbook.class
 /TypingTutor.class
 /Vault.class
 /VaultRunner.class
 /WhackAMole.class
-/birds.wav
-/download.jpg
-/download2.jpg
-/download3.jpg
-/gridworld.jar
-/javazoom.jar
-/pong.wav
-/robot.jar
-/win.mp3
-/Marathoner.class
-/MarathonRegister.class
+/BinaryConverter.class
+/Code4Life.class
